language/move-compiler/tests/move_check/inlining/parameter_borrow.exp
error[E14002]: inlined parameter cannot be l-value
   ┌─ tests/move_check/inlining/parameter_borrow.move:13:17
   │
 4 │         let _x = &t;
   │                   - inlined parameter appearing in lvalue position
   ·
13 │         borrows(vector[1,2,3])
   │                 ^^^^^^^^^^^^^ cannot inline `borrows`: expression is not an lvalue

